# asaltech-test-automation-demo

./: .gitignore  README.md
automation-framework/: README.md
automation-framework/src/web/actions/: element_actions.py
automation-framework/src/web/drivers/: browser_factory.py
automation_framework/: .env  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
automation_framework/src/: pytest_plugin.py
automation_framework/src/ai_module/: pytest_plugin.py  run_analysis.py
automation_framework/src/ai_module/analyzers/: failure_analyzer.py
automation_framework/src/ai_module/config/: ai_settings.py
automation_framework/src/core/base/: web_test_base.py
automation_framework/src/reporters/: ai_report_generator copy.py  ai_report_generator.py  html_reporter.py
automation_framework/src/reporters/templates/: ai_analysis_template.html
automation_framework/src/web/drivers/: browser_factory.py
automation_framework/src/web/pages/: base_page.py
examples/: conftest.py
examples/web_example/pages/: login_page.py
examples/web_example/tests/: test_login.py
examples/web_the_internet/pages/: dynamic_loading_page.py  file_upload_page.py  iframe_page.py  javascript_alerts_page.py  login_page.py
examples/web_the_internet/reports/: ai_analysis_20250311_101008.html  ai_analysis_20250311_112725.html
examples/web_the_internet/tests/: test_dynamic_loading.py  test_file_upload.py  test_iframe.py  test_javascript_alerts.py  test_login.py
reports/: ai_analysis_20250305_101716.html  ai_analysis_20250305_101842.html  ai_analysis_20250305_114825.html
scripts/: run_demo.sh
