[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_framework"
version = "0.1.0"
description = "Test Automation Framework with AI-powered analysis"
dependencies = [
    "selenium==4.18.1",
    "pytest==8.0.0",
    "webdriver-manager==4.0.2",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "jinja2==3.1.3",
    "httpx==0.27.0"
]
dynamic = ["entry-points"]

[tool.setuptools]
packages = ["src"]
package-dir = {"": "."}

[project.entry-points.pytest11]
ai_analysis = "src.ai_module.pytest_plugin"