[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_framework"
version = "0.1.0"
description = "Test Automation Framework with AI-powered analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "ASAL Tech", email = "info@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Software Development :: Testing :: Unit"
]
dependencies = [
    "selenium==4.18.1",
    "pytest==8.0.0",
    "webdriver-manager==4.0.2",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "jinja2==3.1.3",
    "httpx==0.27.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/automation_framework"
"Documentation" = "https://github.com/yourusername/automation_framework/docs"
"Repository" = "https://github.com/yourusername/automation_framework"
"Issues" = "https://github.com/yourusername/automation_framework/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest-cov"
]

[project.entry-points."pytest11"]
ai_analysis = "automation_framework.src.ai_module.pytest_plugin"